--- a/HeaderCommenter/HeaderCommenter.csproj
+++ b/HeaderCommenter/HeaderCommenter.csproj
@@ -75,6 +75,7 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="PythonComment.cs" />
     <Compile Include="SourceFile.cs" />
     <Page Include="MainWindow.xaml">
       <Generator>MSBuild:Compile</Generator>
